test/pending/neg/plugin-before-parser/lib/plugins.jar.desired.sha1
d7b100ad483484b598b7cd643424bd2e33898a0d ?plugins.jar
